# billboard

./: CHANGELOG.md  Cargo.toml  LICENSE_APACHE.txt  LICENSE_MIT.txt  README.md
examples/: alignment.rs  color.rs  custom.rs  hello_world.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: custom_border.rs  display.rs
src/: error.rs  lib.rs  visual.rs
src/config/: alignment.rs  mod.rs  space.rs
src/config/border/: components.rs  mod.rs  style.rs
src/tests/: mod.rs
tests/: mod.rs
