[package]
authors = ["Avery Harnish <rust@averyharnish.com>"]
categories = ["value-formatting"]
description = "Display informational boxes in the terminal."
edition = "2018"
keywords = ["billboard", "cli", "terminal", "boxen", "info"]
license = "MIT/Apache-2.0"
name = "billboard"
readme = "README.md"
repository = "https://github.com/EverlastingBugstopper/billboard"
version = "0.2.0"

[dependencies]
console = "0.15"
term_size = "0.3"
thiserror = "1.0"

[dev-dependencies]
version-sync = "0.9"
assert_cmd = "2"
predicates = "2"

[[example]]
name = "alignment"
path = "examples/alignment.rs"

[[example]]
name = "color"
path = "examples/color.rs"

[[example]]
name = "custom"
path = "examples/custom.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
